* Added new ListDirectory method that takes ListOptions and can return metadata with the entries (new 1.4.1 feature)  * Added new ListObjects call that takes ListOptions for better control over response  * Added new ListOptions feature to control responses and provide proper support for x-emc-limit and x-emc-token    * Note: It is strongly advised to switch over to the ListOptions versions to handle large responses without truncation  * Fixed capitalization of GetShareableUrl  * Added missing EsuApiTest.exe.config

--- a/EsuApiLib/EsuApiLib.csproj
+++ b/EsuApiLib/EsuApiLib.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Grant.cs" />
     <Compile Include="Grantee.cs" />
     <Compile Include="Identifier.cs" />
+    <Compile Include="ListOptions.cs" />
     <Compile Include="Metadata.cs" />
     <Compile Include="MetadataList.cs" />
     <Compile Include="MetadataTag.cs" />
