--- a/EsuApiLib/EsuApiLib.csproj
+++ b/EsuApiLib/EsuApiLib.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadObjectStreamResponse.cs" />
     <Compile Include="Rest\EsuRestApi.cs" />
+    <Compile Include="Rest\LBEsuRestApi.cs" />
     <Compile Include="ServiceInformation.cs" />
     <Compile Include="UploadHelper.cs" />
   </ItemGroup>
