--- a/EsuApiTest/EsuApiTest.csproj
+++ b/EsuApiTest/EsuApiTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="EsuRestApiTest.cs" />
     <Compile Include="MultipartEntityTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CreateSubtenantTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="readme.txt" />
